# OpenSoundDeck

./: .gitignore  BUILDING.md  CMakeLists.txt  CONTRIBUTING.md  Info.plist  LICENSE.md  README.md  app.rc  resources.qrc
icons/: app.icns
src/: AudioEngine.cpp  AudioEngine.h  GlobalHotkeyManager.cpp  GlobalHotkeyManager.h  HotkeyCaptureDialog.cpp  HotkeyCaptureDialog.h  MainWindow.cpp  MainWindow.h  SettingsDialog.cpp  SettingsDialog.h  main.cpp
